--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public",
-    "chromatic": "npx chromatic --project-token xcikl0r92v"
+    "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
     "extends": [
